Therion 6.3.0 (in progress):

therion:
 * REMOVED proj-auto initialization file option;
   remove it from your ini files if you use it
 * support for Geospatial PDF maps added (custom georeferencing used in versions
   5.3-6.2.1 is not included in PDF maps any more)
 * new layout option: geospatial on/off

--------------------------------------------------------------------------------

Therion 6.2.1 (2024-03-20):

therion:
 * Polish translation updated [#553]
 * many C++/CMake/Makefile improvements and fixes by Matěj Plch
   [#535, #536, #537, #539, #541, #541, #542, #552]
 * updated poly2tri library [#538]
 * bugs fixed:
   - length can also be equal to depth change [#556]
   - std::sort() usage causing segmentation fault in some cases

xtherion:
 * new setting $xth(gui,init_app_normalized) to allow disabling of window
   geometry adjustments when xtherion starts [#557]
 * xtherion line artifact fixed [#554]

infrastructure:
 * initial implementation of a devcontainer [#532]
 * CI environments: fixes, macOS 14 added [#546, #551]

--------------------------------------------------------------------------------

Therion 6.2.0 (2023-12-21):

therion:
 * Windows version: only 64-bit Windows are supported now [#530]
 * code fixes and improvements by Matěj Plch [#518, #522, #523, #524, #533]
 * thbook fixes, mostly by Rodrigo Severo [#520, #525, #526]
 * updated QuickHull library [#521]
 * added support for Catch2 version 3 [#534]
 * Proj 9.3.1 included to the test suite

loch:
 * fixed compilation issues on Debian

infrastructure:
 * installer: updated TeX and ImageMagick to use current, 64-bit binaries
 * macOS 13 added to and macOS 11 removed from CI environments [#516, #529]

--------------------------------------------------------------------------------

Therion 6.1.8 (2023-06-14):

therion:
 * added coordinate transformation sample
 * bugs fixed:
   - "no usable coordinate transformation found" issue when there is just one
     fixed station