@@ -6,6 +6,9 @@ therion:
  * support for Geospatial PDF maps added (custom georeferencing used in versions
    5.3-6.2.1 is not included in PDF maps any more)
  * new layout option: geospatial on/off
+ * projection (*.prj) files associated with shapefiles are generated by Proj
+   for all output projections;
+   it's not possible to specify them in thcsdata.tcl any more
 
 --------------------------------------------------------------------------------
 
